src/objects/SPE_SPETemplate__c.object
<CustomObject>
    <customHelpPage>SPE_SPE_Definition_Help_Page</customHelpPage>
    <fields>
        <fullName>BUScope__c</fullName>
        <label>Product Scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Products</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PROCUREMENT &amp; TELECOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SUBCONTRACTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING MANUFACTURING &amp; MEASUREMENT EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL &amp; FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS INCUBATION &amp; E2E SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC MANUFACTURING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERCONNECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/ODM/JDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMICONDUCTOR AND RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL WORKFORCE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING MS NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING OTHER NI SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING TELECOM IMPLEMENTATION SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEACTIVATED STRUCTURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPENDITURES REPORTED ERRONEOUSLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-MANAGED EXPENDITURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT ASSIGNED SPEND GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING NI SERVICES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Hierarchy__c</fullName>
        <label>Category Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BUILDING INVESTMENT/CAPEX WITHOUT RENTS AND LEASES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY MANAGEMENT SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENTAL/LEASE/TRANSACTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION MAINTENANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW PERIPHERALS / SERVERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFRASTRUCTURE SERVICES &amp; CLOUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORKPLACE DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSOCIATED SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAREHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SERVICES OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COACHING &amp; OTHER CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL TAX &amp; INSURANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL &amp; INTELLECTUAL PROPERTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKETING &amp; COMMUNICATIONS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUNCTIONAL TEST EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PERIPHERAL DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING AUXILIARIES AND CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFORMANCE TEST EQUIPMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Categoryscope__c</fullName>
        <label>Category scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Categories</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Category Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoScope__c</fullName>
        <label>Geography Scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Markets</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geo_Hierarchy__c</fullName>
        <description>Field to store the Geo Hierarchy</description>
        <label>Geo Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <inlineHelpText>Relevant org/group for this data</inlineHelpText>
        <label>Organization/Group</label>
        <picklist>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTERNING ORGANIZATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>All Project</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AF AWCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL VODAFONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL M4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL PLUS CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ OOREDOO ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ.ORASCOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA TELECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI MOVIL ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEFONICA PANAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CTI MOVIL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CABLEVISION NGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PERSONAL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PDH/SDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CLARO ARGENTINA SWAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TECO TDM EVOLUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VODAFONE AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU DOT DTRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU NBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G OLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT NETCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT CALDERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT TMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT A1 AUSTRIA CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT ORANGE AUSTRIA CARE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPEName__c</fullName>
        <label>SPEName</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SPETemplateID__c</fullName>
        <displayFormat>SPE-TEMP-{0000}</displayFormat>
        <label>SPE Template ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SPE_Template_Code__c</fullName>
        <displayFormat>STC-{0000}</displayFormat>
        <label>SPE Template Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SPE_Template_Sequential_ID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, SPE_Template_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Template Sequential ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>SPE Template can not be Published without a Scoring Template</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Operational, Commercial, or Strategic</inlineHelpText>
        <label>SPE Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SPE Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SPE_Template_Code__c</columns>
        <columns>NAME</columns>
        <columns>Organization_Group__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SPE Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPE Templates</pluralLabel>
    <recordTypes>
        <fullName>Obsolete</fullName>
        <active>true</active>
        <description>Obsolete record type for Obsolete lifecylce.</description>
        <label>Obsolete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pilot</fullName>
        <active>true</active>
        <description>Change the record type to Pilot when lifecycle stage is pilot</description>
        <label>Pilot</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SPE_special_character_not_allowed</fullName>
        <active>true</active>
        <description>Name should be start with Alphanumeric only</description>
        <errorConditionFormula>NOT(REGEX(Name, &quot;[a-zA-Z 0-9]{1}.*&quot;))</errorConditionFormula>
        <errorMessage>Name should be start with Alphanumeric only</errorMessage>
    </validationRules>
</CustomObject>